Add link to the repository to the front page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <body>
         <h1>Waves in Solids</h1>
 
+        <div id="hud">
+            <div class="hud-panel top-right">
+            <a class="link" href="http://github.com/Postrediori/WavesInSolids">Waves in Solids</a> (JavaScript) 
+            <br />Created by <a href="http://postrediori.github.io/">Rasim Labibov</a>
+            </div>
+        </div>
+  
         <form id="model-params">
             <input type="hidden" name="fps" value="50" />
             <input type="hidden" name="points-count" value="50" />
