--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <p class="info-block hidden-block" id="radialpwave-info">
             The equation of a radial P-wave is given by: <br />
             <img src="images/radialpwave.png" alt="Radial P-Wave Equation" /><br />
-            where <em>&theta;</em>, <em>r</em> are the polar coordinates of a point <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.
+            where <em>&theta;</em>, <em>r</em> are the polar coordinates of a point
+            <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect
+            to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.
         </p>
         
         <p class="info-block hidden-block" id="radialswave-info">
