Re-write equations of radial S-wave model

--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
         
         <p class="info-block hidden-block" id="radialswave-info">
             The equation of a radial S-wave is given by: <br />
-            <img src="images/radialswave.png" alt="Radial S-Wave Equation" /><br />
-            where <em>&theta;</em>, <em>r</em> are the polar coordinates of a point <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.
+            <img src="images/radialswave.png" alt="Radial S-Wave Equation" />,&nbsp;
+            <img src="images/radialswave1.png" alt="Shear Angle Equation" /><br />
+            where <em>&psi;</em> is shear angle of a point,
+            <em>&theta;</em>, <em>r</em> are the polar coordinates of a point
+            <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect
+            to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.
         </p>
       
         <svg id="canvas" width="640" height="480"></svg>
