Add interactive marker and marker history to models

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <input type="hidden" name="amplitude" value="20.0" />
             <input type="hidden" name="scale" value="0.025" />
             <input type="hidden" name="time-scale" value="0.0025" />
+            <input type="hidden" name="marker-history-len" value="75" />
         </form>
         
         <div id="models-list">
