Simplify Rayleigh model by using exponent as decay function

--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@
             <a href="https://en.wikipedia.org/wiki/Rayleigh_wave">Rayleigh waves</a>
             are a type of surface acoustic wave that travel along the surface of solids.<br />
             The equation of a Rayleigh wave is given by: <br />
-            <img src="images/RayleighWaveEq1.png" alt="Rayleigh wave Equation" />,&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/RayleighWaveEq2.png" alt="Point depth" />,&nbsp;&nbsp;&nbsp;&nbsp;
-            <img src="images/RayleighWaveEq3.png" alt="Wave phase" /><br />
+            <img src="images/RayleighWaveEq.png" alt="Rayleigh wave Equation" /><br />
             where <em>&phi;</em> is wave phase in a point,
+            <em>&delta;</em> is dimensionless depth of a point,
             <em>d</em> is depth of a point <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect to medium top level <em>Y</em>,
             <em>h</em> is total medium depth,
             <em>A<sub>x</sub></em> and <em>A<sub>y</sub></em> are horizontal and vertical
