Move math utils to a separate file

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
       
         <svg id="canvas" width="640" height="480"></svg>
 
+        <script type="text/javascript" src="js/Utils.js"></script>
         <script type="text/javascript" src="js/WaveModels.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 
