--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="button model-switch" href="#radialswave">Radial S-wave</a>
                 <a class="button model-switch" href="#rayleighwave">Rayleigh wave</a>
                 <a class="button model-switch" href="#asymlambwave">Antisymmetric Lamb wave</a>
-                <a class="button model-switch" href="#symlambwave">Symetrical Lamb wave</a>
+                <a class="button model-switch" href="#symlambwave">Symmetric Lamb wave</a>
             </div>
             
             <div id="info-blocks">
