Update Lamb waves info

--- a/index.html
+++ b/index.html
@@ -113,11 +113,7 @@
                     propagate in solid plates. They are a combination of standing waves and
                     elastic propagational waves that, like Rayleigh waves, are constrained by
                     the elastic properties of the surface(s) that guide them.</p>
-                    <p>Their properties turned out to be quite complex. Since the 1990s,
-                    the understanding and utilization of Lamb waves has advanced greatly, thanks
-                    to the rapid increase in the availability of computing power. Lamb's theoretical
-                    formulations have found substantial practical application, especially in the field
-                    of nondestructive testing.</p>
+                    <p>Antisymmetric Lamb waves are also called <em>A<sub>0</sub>-mode Lamb waves.</em></p>
                 </div>
 
                 <div class="info-block hidden-block" id="symlambwave-info">
@@ -125,11 +121,7 @@
                     propagate in solid plates. They are a combination of standing waves and
                     elastic propagational waves that, like Rayleigh waves, are constrained by
                     the elastic properties of the surface(s) that guide them.</p>
-                    <p>Their properties turned out to be quite complex. Since the 1990s,
-                    the understanding and utilization of Lamb waves has advanced greatly, thanks
-                    to the rapid increase in the availability of computing power. Lamb's theoretical
-                    formulations have found substantial practical application, especially in the field
-                    of nondestructive testing.</p>
+                    <p>Antisymmetric Lamb waves are also called <em>S<sub>0</sub>-mode Lamb waves.</em></p>
                 </div>
             </div>
         </div>
