Update wave equations in descriptions
Write equations in displacements instead of global coordinates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     than other seismic waves and hence are the first signal from an earthquake
                     to arrive at any affected location or at a seismograph.</p>
                     <p>The equation of a P-wave is given by:</p>
-                    <img src="images/pwave.png" alt="P-wave Equation" />
+                    <img src="images/PWaveEq.png" alt="P-wave Equation" />
                 </div>
                 
                 <div class="info-block hidden-block" id="swave-info">
@@ -61,7 +61,7 @@
                     slower in rock than P-waves, during earthquakes they arrive after the
                     primary compressional wave on an earthquake seismogram.</p>
                     <p>The equation of an S-wave is given by:</p>
-                    <img src="images/swave.png" alt="S-wave Equation" />
+                    <img src="images/SWaveEq.png" alt="S-wave Equation" />
                 </div>
                 
                 <div class="info-block hidden-block" id="radialpwave-info">
@@ -71,7 +71,7 @@
                     than other seismic waves and hence are the first signal from an earthquake
                     to arrive at any affected location or at a seismograph.</p>
                     <p>The equation of a radial P-wave is given by:</p>
-                    <img src="images/radialpwave.png" alt="Radial P-wave Equation" />
+                    <img src="images/RadialPWaveEq.png" alt="Radial P-wave Equation" />
                     <p>where <em>&theta;</em>, <em>r</em> are the polar coordinates of a point
                     <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect
                     to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.</p>
@@ -85,7 +85,7 @@
                     slower in rock than P-waves, during earthquakes they arrive after the
                     primary compressional wave on an earthquake seismogram.</p>
                     <p>The equation of a radial S-wave is given by: </p>
-                    <img src="images/radialswave.png" alt="Radial S-wave Equation" />
+                    <img src="images/RadialSWaveEq.png" alt="Radial S-wave Equation" />
                     <p>where <em>&theta;</em>, <em>r</em> are the polar coordinates of a point
                     <em>(x<sub>0</sub>, y<sub>0</sub>)</em> with respect
                     to the wave origin point <em>C(x<sub>c</sub>, y<sub>c</sub>)</em>.</p>
