Update page layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <html>
     <head>
-        <title>SVG Wave Models</title>
+        <title>Waves in Solids</title>
 
-        <meta name="description" content="Procedural wave animations using SVG." />
+        <meta name="description" content="Virualisations of waves in solids written in JavaScript and SVG control." />
 
         <meta charset="utf-8" />
 
@@ -14,8 +14,8 @@
     <body>
         <div id="hud">
             <div class="hud-panel top-right">
-                    <a href="http://postrediori.github.io/">Rasim Labibov</a> | 
-                    <a href="http://github.com/Postrediori/WavesInSolids">Code on GitHub</a>
+                <a href="http://postrediori.github.io/">Rasim Labibov</a> | 
+                <a href="http://github.com/Postrediori/WavesInSolids">Code on GitHub</a>
             </div>
         </div>
   
@@ -131,6 +131,8 @@
         <script type="text/javascript" src="js/WaveModels.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
 
-        <noscript>Enable JavaScript!</noscript>
+        <noscript>
+            Enable JavaScript!
+        </noscript>
     </body>
 </html>
