Change external links

--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
     </head>
 
     <body>
-        <div id="hud">
-            <div class="hud-panel top-right">
-                <a href="http://postrediori.github.io/">Rasim Labibov</a> | 
-                <a href="http://github.com/Postrediori/WavesInSolids">Code on GitHub</a>
-            </div>
-        </div>
+        <div id="hud"><a href="https://postrediori.github.io">Rasim Labibov</a> | <a href="http://github.com/Postrediori/WavesInSolids">Code</a></div>
   
         <form id="model-params">
             <input type="hidden" name="points-count" value="50" />
